--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -1,3 +1,5 @@
+@import './font.scss'; // MiSans VF
+
 :root {
   --main-bg-color: rgb(247, 247, 247);
   --main-card-color: rgb(255, 255, 255);
@@ -39,6 +41,8 @@ body {
   height: 100%;
   background-color: var(--main-bg-color);
   overflow: hidden;
+  font-family: 'Inter', 'MiSans VF', sans-serif;
+
 }
 
 #nuxt-app {
