fix(font): 他妈的给我覆盖啊

--- a/app/style/main.scss
+++ b/app/style/main.scss
@@ -41,7 +41,7 @@ body {
   height: 100%;
   background-color: var(--main-bg-color);
   overflow: hidden;
-  font-family: 'Inter', 'MiSans VF', sans-serif;
+  font-family: 'Inter', 'MiSans VF', sans-serif !important;
 
 }
 
